--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 // Run 'gradle checkUpdates' to find out which dependencies have newer versions
 
 plugins {
-    id 'net.minecrell.licenser' version '0.4.1'
+    id 'org.cadixdev.licenser' version '0.6.1'
     id 'com.github.sherter.google-java-format' version '0.9'
-    id "net.ltgt.errorprone" version "1.3.0"
-    id 'name.remal.check-updates' version '1.1.4'
+    id "net.ltgt.errorprone" version "2.0.2"
 }
 
 apply plugin: 'java'
@@ -30,18 +29,17 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'io.temporal', name: 'temporal-sdk', version: '1.1.0'
+    implementation group: 'io.temporal', name: 'temporal-sdk', version: '1.11.0'
     implementation group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
-    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
 
-    testImplementation group: 'io.temporal', name: 'temporal-testing', version: '1.1.0'
-    testImplementation group: 'io.temporal', name: 'temporal-testing-junit4', version: '1.1.0'
-    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
-    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
-    testImplementation group: 'org.powermock', name: 'powermock-api-mockito', version: '1.7.4'
+    testImplementation group: 'io.temporal', name: 'temporal-testing', version: '1.11.0'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
+    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
 
     errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
-    errorprone("com.google.errorprone:error_prone_core:2.4.0")
+    errorprone("com.google.errorprone:error_prone_core:2.10.0")
 }
 
 compileJava {
